--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "marked": "^0.3.5",
     "morgan": "^1.7.0",
     "nodemon": "^1.9.2",
     "pg": "^4.5.5",
